# 2paint

./: CMakeLists.txt  README.md
src/headers/: canvas.h  history_manager.h  info_toolbar.h  layer_manager.h  main_window.h
src/headers/tools/: tool.h
src/sources/: canvas.cpp  history_manager.cpp  info_toolbar.cpp  layer_manager.cpp  main_window.cpp
src/sources/tools/: tool.cpp
